--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.0.14",
     "mongoose-sequence": "^5.3.1",
-    "validator": "^10.6.0"
+    "validator": "^10.6.0",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
